@@ -2,26 +2,23 @@ package reciter.controller;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.StringWriter;
+import java.net.URI;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.OptionalLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.http.Header;
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.params.ClientPNames;
-import org.apache.http.impl.client.HttpClients;
-import org.apache.http.message.BasicNameValuePair;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -44,23 +41,30 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import lombok.extern.slf4j.Slf4j;
 import reciter.model.pubmed.PubMedArticle;
 import reciter.pubmed.model.PubMedQuery;
 import reciter.pubmed.model.PubmedESearchResult;
 import reciter.pubmed.querybuilder.PubmedXmlQuery;
 import reciter.pubmed.retriever.PubMedArticleRetrievalService;
 
-@Slf4j
 @RestController
 @RequestMapping("/pubmed")
 @Tag(name = "PubMedController", description = "Operations on querying the PubMed API")
 public class PubMedRetrievalToolController {
-
+	
+	private static final Logger log = LoggerFactory.getLogger(PubMedRetrievalToolController.class);
+    
+	 // ── Compiled once — Pattern is thread-safe and expensive to compile ──
+    private static final Pattern BRACKET_PATTERN   = Pattern.compile("\\[(.*?)\\]");
+    
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+    
+    // ── Shared HttpClient — reuses connection pool across all calls ──
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(30)).build();
+    
     @Autowired
     private PubMedArticleRetrievalService pubMedArticleRetrievalService;
     
-    private static ObjectMapper objectMapper = new ObjectMapper().configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 
     @Operation(summary = "Query with field selection.", description = "Query PubMed with optional field selection")
     @ApiResponses(value = {
@@ -81,157 +85,141 @@ public class PubMedRetrievalToolController {
         return ResponseEntity.ok(pubMedArticles);
     }
 
-    /*@RequestMapping(value = "/query-doi/", method = RequestMethod.POST)
-    @ResponseBody
-    public ResponseEntity<List<PubMedArticle>> queryDoi(@RequestBody PubMedQuery pubMedQuery) throws IOException {
-        List<PubMedArticle> pubMedArticles = query(pubMedQuery.getDoi(), null);
-        return ResponseEntity.ok(pubMedArticles);
-    }*/
 
     @PostMapping("/query-number-pubmed-articles/")
     public int getNumberOfPubMedArticles(@RequestBody PubMedQuery pubMedQuery) throws IOException {
     	
-        PubmedXmlQuery pubmedXmlQuery = new PubmedXmlQuery(URLEncoder.encode(pubMedQuery.toString(), "UTF-8"));
-        //pubmedXmlQuery.setRetMax(1);
+
+        PubmedXmlQuery pubmedXmlQuery = new PubmedXmlQuery(
+                URLEncoder.encode(pubMedQuery.toString(), StandardCharsets.UTF_8));
         pubmedXmlQuery.setRetStart(0);
-        String fullUrl = pubmedXmlQuery.buildESearchQuery(); // build eSearch query.
-        log.info("ESearch Query=[" + fullUrl + "]");
-        //PubmedESearchHandler pubmedESearchHandler = new PubmedESearchHandler();
+
+        // Build base URL — api_key in URL, form params in POST body
+        String fullUrl = (pubmedXmlQuery.getApiKey() != null && !pubmedXmlQuery.getApiKey().isEmpty())
+                ? PubmedXmlQuery.ESEARCH_BASE_URL + "?api_key=" + pubmedXmlQuery.getApiKey()
+                : PubmedXmlQuery.ESEARCH_BASE_URL;
+
+        log.info("ESearch Query=[{}]", fullUrl);
+
+        // Build URL-encoded form body
+        String formData = "db="         + URLEncoder.encode(pubmedXmlQuery.getDb(), StandardCharsets.UTF_8)
+                + "&retmax="     + pubmedXmlQuery.getRetMax()
+                + "&usehistory=" + URLEncoder.encode(pubmedXmlQuery.getUseHistory(), StandardCharsets.UTF_8)
+                + "&term="       + URLEncoder.encode(
+                        java.net.URLDecoder.decode(pubmedXmlQuery.getTerm(), StandardCharsets.UTF_8),
+                        StandardCharsets.UTF_8)
+                + "&retmode="    + URLEncoder.encode(pubmedXmlQuery.getRetMode(), StandardCharsets.UTF_8)
+                + "&retstart="   + pubmedXmlQuery.getRetStart();
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(fullUrl))
+                .header("Content-Type", "application/x-www-form-urlencoded")
+                .header("Cache-Control", "no-cache")
+                .POST(HttpRequest.BodyPublishers.ofString(formData))
+                .build();
+
+        try {
+            HttpResponse<InputStream> response = HTTP_CLIENT.send(
+                    request, HttpResponse.BodyHandlers.ofInputStream());
+
+            // ── Rate-limit handling — matches original condition exactly ──
+            // orElse(-1): absent header → -1 → block never triggers (matches original null/length guard)
+            int rateLimitRemaining = (int) response.headers()
+                    .firstValueAsLong("X-RateLimit-Remaining")
+                    .orElse(-1L);
+
+            // Log rate-limit headers when both are present (matches original guard)
+            response.headers().firstValue("X-RateLimit-Limit").ifPresent(limit ->
+                    log.info("Query: {} X-RateLimit-Limit: {} X-RateLimit-Remaining: {}",
+                            pubMedQuery, limit, rateLimitRemaining));
+
+            if (rateLimitRemaining == 0) {
+                // Inner guard: only sleep+retry if Retry-After header is present
+                // matches: headerRetryAfter != null && length > 0 && headerRetryAfter[0] != null
+                OptionalLong retryAfter = response.headers().firstValueAsLong("Retry-After");
+                if (retryAfter.isPresent()) {
+                    long sleepSeconds = retryAfter.getAsLong();
+                    log.info("Rate limit hit. Query: {} Retry-After: {} seconds", pubMedQuery, sleepSeconds);
+                    try {
+                        Thread.sleep(sleepSeconds * 1000L);
+                    } catch (InterruptedException ie) {
+                        Thread.currentThread().interrupt();
+                        log.error("InterruptedException during rate-limit pause", ie);
+                    }
+                    // Retry only after confirmed sleep — matches original retry placement
+                    response = HTTP_CLIENT.send(request, HttpResponse.BodyHandlers.ofInputStream());
+                }
+            }
+
+            // ── Parse response body ──
+            // readAllBytes() replaces IOUtils.copy() + StringWriter — no Apache Commons IO
+            String responseString = new String(response.body().readAllBytes(), StandardCharsets.UTF_8);
+            log.info("PubMed eSearch raw response: {}", responseString);
+
+            if (responseString != null
+                    && !responseString.isBlank()
+                    && responseString.trim().startsWith("{")
+                    && OBJECT_MAPPER.readTree(responseString).has("esearchresult")) {
+
+                JsonNode json = OBJECT_MAPPER.readTree(responseString).get("esearchresult");
+                log.info("PubMed Response Json: {}", json);
+
+                return resolveESearchCount(json, pubMedQuery.toString());
+            }
+
+            log.error("Unexpected response (not JSON) — possibly an HTML error page.");
+            return 0;
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IOException("HTTP request interrupted for query=[" + pubMedQuery + "]", e);
+        }
+    }
+
+    private int resolveESearchCount(JsonNode json, String queryForLog) throws IOException {
         PubmedESearchResult eSearchResult = new PubmedESearchResult();
-        HttpClient httpClient = HttpClients.createDefault();
-        if(pubmedXmlQuery.getApiKey() != null &&
-       		  !pubmedXmlQuery.getApiKey().isEmpty()) {
-        	fullUrl = PubmedXmlQuery.ESEARCH_BASE_URL + "?api_key=" + pubmedXmlQuery.getApiKey();
+
+        String queryTranslation = json.path("querytranslation").asText();
+        log.info("Query translation prior to processing: {}", queryTranslation);
+
+        if (isValidAuthorString(queryTranslation)) {
+            log.info("Entering firstNameInitial strategy query processing");
+
+            // Split by [Author], strip connectors and whitespace, filter empty
+            List<String> segments = Arrays.stream(queryTranslation.split("\\[Author\\]"))
+                    .map(String::trim)
+                    .map(part -> part.replaceAll("\\b(AND|OR)\\b", ""))
+                    .map(part -> part.replaceAll("\\s", ""))
+                    .filter(part -> !part.isEmpty())
+                    .collect(Collectors.toList());
+
+            // At least one segment must be longer than 2 characters
+            boolean hasValidSegment = segments.stream().anyMatch(s -> s.length() > 2);
+
+            if (!hasValidSegment) {
+                log.error("No first-name initial found with more than 2 letters — ignoring {} records from PubMed",
+                        eSearchResult.getCount());
+                return 0;
+            }
+
+            eSearchResult = OBJECT_MAPPER.treeToValue(json, PubmedESearchResult.class);
+            log.info("eSearchResult count for firstNameInitial strategy: {}", eSearchResult.getCount());
+
         } else {
-        	fullUrl = PubmedXmlQuery.ESEARCH_BASE_URL;
-        }
-        
-        HttpPost httppost = new HttpPost(fullUrl);
-        // Request parameters and other properties.
-        List<NameValuePair> params = new ArrayList<>();
-        params.add(new BasicNameValuePair("db", pubmedXmlQuery.getDb()));
-        params.add(new BasicNameValuePair("retmax", String.valueOf(pubmedXmlQuery.getRetMax())));
-        params.add(new BasicNameValuePair("usehistory", pubmedXmlQuery.getUseHistory()));
-        params.add(new BasicNameValuePair("term", java.net.URLDecoder.decode(pubmedXmlQuery.getTerm(), "UTF-8")));
-        params.add(new BasicNameValuePair("retmode", pubmedXmlQuery.getRetMode()));
-        params.add(new BasicNameValuePair("retstart", String.valueOf(pubmedXmlQuery.getRetStart())));
-        httppost.setEntity(new UrlEncodedFormEntity(params));
-        httppost.setHeader("Content-Type", "application/x-www-form-urlencoded");
-        httppost.getParams().setParameter(ClientPNames.COOKIE_POLICY, "standard");
-        httppost.setHeader("cache-control", "no-cache");
-
-        //Execute and get the response.
-        
-        HttpResponse response = httpClient.execute(httppost);
-        
-        Header[] headerRateLimitRemaining = response.getHeaders("X-RateLimit-Remaining");
-        Header[] headerRateLimit = response.getHeaders("X-RateLimit-Limit");
-        Header[] headerRetryAfter = response.getHeaders("Retry-After");
-        
-        if(pubMedQuery!=null && headerRateLimit!=null && headerRateLimit.length > 0 && headerRateLimit[0]!=null 
-        		&& headerRateLimitRemaining!=null && headerRateLimitRemaining.length >0 && headerRateLimitRemaining[0]!=null)
-        log.info("Query : " + pubMedQuery.toString()  + " " + headerRateLimit[0].toString() + " " + headerRateLimitRemaining[0].toString());
-        
-        if(headerRateLimitRemaining != null && headerRateLimitRemaining.length > 0 && headerRateLimitRemaining[0] != null && Integer.parseInt(headerRateLimitRemaining[0].getValue()) == 0) {
-        	if(headerRetryAfter != null && headerRetryAfter.length > 0 && headerRetryAfter[0] != null) {
-        		log.info("Query : " + pubMedQuery.toString()  + " " + headerRetryAfter[0].toString());
-        		try {
-        			Thread.sleep(Long.parseLong(headerRetryAfter[0].getValue()) * 1000L);
-        		} catch (InterruptedException e) {
-        			log.error("InterruptedException", e);
-        		}
-        		response = httpClient.execute(httppost);
-        	}
-        }
-		/*
-		 * for (Header header : headers) {
-		 * if(header.getName().equalsIgnoreCase("X-RateLimit-Limit") ||
-		 * header.getName().equalsIgnoreCase("X-RateLimit-Remaining") ||
-		 * header.getName().equalsIgnoreCase("Retry-After")) { log.info("Key : " +
-		 * header.getName() + " ,Value : " + header.getValue()); } }
-		 */
-        HttpEntity entity = response.getEntity();
-        if (entity != null) {
-            InputStream esearchStream = entity.getContent();
-			
-			  StringWriter writer = new StringWriter(); 
-			  IOUtils.copy(esearchStream, writer,"UTF-8"); 
-			  log.info(writer.toString());
-			  String responseString = writer.toString();
-            //SAXParserFactory.newInstance().newSAXParser().parse(esearchStream, pubmedESearchHandler);
-			if (responseString!=null && !responseString.equalsIgnoreCase("") && responseString.trim().startsWith("{") && objectMapper.readTree(responseString).has("esearchresult")) 
-			{  
-		            JsonNode json = objectMapper.readTree(responseString).get("esearchresult");
-            log.info("PubMed Response Json:",json);
-
-            // Extract the "querytranslation" field
-	         String queryTranslation = json.path("querytranslation").asText();
-	         log.info("query translation prior to processing:",queryTranslation);
-	         // Check if the string contains [Affiliation], if it does, stop processing
-	         if (isValidAuthorString(queryTranslation)) {
-	        	 log.info("Entered into process firstNameInitial stragey query");
-	        	 
-	             // Split the string by [Author] and process each part
-	             List<String> segments = //Arrays.stream(queryTranslation.split("(?<=\\[Author\\])")) // Split the string by [Author]
-		            		 			 Arrays.stream(queryTranslation.split("\\[Author\\]")) // Split by [Author]
-		                                       .map(String::trim)  // Trim spaces around each part
-	                                           .map(part -> part.replaceAll("\\b(AND|OR)\\b", ""))  // Remove "AND" and "OR"
-	                                           .map(part -> part.replaceAll("\\s", ""))  // Remove all spaces
-	                                           .filter(part -> !part.isEmpty())  // Filter out empty parts
-	                                           .collect(Collectors.toList());
-	         
-	             // Flag to check if we found a valid segment (length > 2)
-	             boolean isValidSegmentFound = false;
-
-	             // Iterate over each segment
-	             for (String part : segments) {
-	                 if (part.length() > 2) {
-	                     isValidSegmentFound = true; // We found a valid segment
-	                     break;  // Once we find a valid part, we stop further checks and proceed
-	                 }
-	             }
-	             
-	             
-	             // After the loop, if no valid segment was found, throw an exception
-	             if (!isValidSegmentFound) {
-	            	 log.error("No First Name initial found with more than 2 letters.Hence ignoring the " + eSearchResult.getCount() + "records returned from the PubMed");
-	            	 eSearchResult.setCount(0);
-	                 
-	             }
-	             else
-	             {
-	            	 if(json != null) {
-		     				eSearchResult = objectMapper.treeToValue(json, PubmedESearchResult.class);
-		     				log.info("eSearchResult count for the firstNameInitial strategy :",eSearchResult.getCount());
-		     			} 
-	             }
-	         }
-	         else
-	         {	 
-				if(json !=  null) {
-					eSearchResult = objectMapper.treeToValue(json, PubmedESearchResult.class);
-				}
-	         }
-		        
-		        log.info("esearchResults Count :"+eSearchResult.getCount());
-		        return eSearchResult.getCount();
-          }
-		  else
-		  {
-			  log.error("Unexpected response (not JSON), possibly an HTML error page.");
-			  return 0;
+            eSearchResult = OBJECT_MAPPER.treeToValue(json, PubmedESearchResult.class);
         }
 
+        log.info("esearchResult count: {}", eSearchResult.getCount());
+        return eSearchResult.getCount();
     }
-        return 0;
-    }
-
+    
     private List<PubMedArticle> retrieve(String query, String fields) throws IOException {
-        query = URLEncoder.encode(query, "UTF-8");
-        log.info("Retrieving with query=[" + query + "]");
+    	query = URLEncoder.encode(query, StandardCharsets.UTF_8);
+    	log.info("Retrieving with query=[{}]", query);
         if (fields != null && !fields.isEmpty()) {
             fields = fields.toLowerCase();
         }
+        
         ObjectMapper objectMapper = Squiggly
                 .init(new ObjectMapper(), fields)
                 .configure(MapperFeature.ACCEPT_CASE_INSENSITIVE_PROPERTIES, true)
@@ -246,7 +234,7 @@ public class PubMedRetrievalToolController {
             try {
                 pubMedArticle = objectMapper.readValue(partialObject, PubMedArticle.class);
             } catch (IOException e) {
-                log.error("Unable to read value from pmid=" + elem.getMedlinecitation().getMedlinecitationpmid().getPmid(), e);
+            	 log.error("Unable to read value from pmid={}",elem.getMedlinecitation().getMedlinecitationpmid().getPmid(), e);
             }
             result.add(pubMedArticle);
         });
@@ -255,10 +243,8 @@ public class PubMedRetrievalToolController {
     }
     private static boolean isValidAuthorString(String input) {
         // Regular expression to match anything inside square brackets
-        Pattern pattern = Pattern.compile("\\[(.*?)\\]");
-        
-        Matcher matcher = pattern.matcher(input);
-        boolean containsAuthor = false;
+    	Matcher matcher = BRACKET_PATTERN.matcher(input);        
+    	boolean containsAuthor = false;
 
         while (matcher.find()) {
             String matchedContent = matcher.group(1).trim(); // Get the content inside []
